[gd_scene load_steps=6 format=2]

[ext_resource path="res://dialogs/bobs/DialoguePlayer.gd" type="Script" id=1]
[ext_resource path="res://dialogs/bobs/DialogueBox.gd" type="Script" id=2]
[ext_resource path="res://fonts/external/Unifont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/images/characters/portraits/dt_neutral.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Dialogue" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="DialogueBox" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 480.0

[node name="NinePatchRect" type="NinePatchRect" parent="DialogueBox"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel2" type="Panel" parent="DialogueBox"]
margin_top = 264.0
margin_right = 96.0
margin_bottom = 360.0

[node name="Portrait" type="TextureRect" parent="DialogueBox/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="Panel" type="Panel" parent="DialogueBox"]
anchor_right = 0.08
margin_top = 360.0
margin_right = 441.6
margin_bottom = 480.0

[node name="Text" type="RichTextLabel" parent="DialogueBox/Panel"]
margin_right = 480.0
margin_bottom = 120.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="DialoguePlayer" type="Node" parent="DialogueBox"]
script = ExtResource( 1 )
